<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/colorPrimary"
        android:gravity="bottom">

        <TextView
            android:id="@+id/tv_title_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tambah_data"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="24sp"
            android:padding="10dp"
            android:textColor="@android:color/white"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/nama"/>

        <EditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/kota"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save"
            android:text="@string/simpan"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"/>
    </LinearLayout>
</LinearLayout>